<resources>
    <string name="app_name">Checks N Cards by Air</string>
    <string name="menu_settings_CC">CC Settings</string>
    <string name="menu_settings_ACH">ACH Settings</string>
    <string name="menu_close">Close</string>
    <string name="company_name">Simply Connected Systems</string>
    <string name="slogan">Mobile Payments</string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sale_amount">Sale Amount $</string>
    <string name="enter_amount">$ amount</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="enter_credit_card_number">credit card number</string>
    <string name="credit_card_exp_date">Credit Card Exp Date</string>
    <string name="enter_exp_date">exp date</string>
    <string name="cvv_number">cvv Number (optional)</string>
    <string name="enter_cvv">cvv</string>
    <string name="order_id">Order Id</string>
    <string name="enter_order_id">order id</string>
    <string name="aba_id">Routing Number</string>
    <string name="enter_aba_id">aba</string>
    <string name="dda_id">Direct Deposit Account</string>
    <string name="enter_cheque_num_id">Check Number</string>
    <string name="cheque_num_id">Check (optional)</string>
    <string name="enter_dda_id">dda</string>
    <string name="account_type_id">Account Type</string>
    <string name="enter_account_type_id">ach account type</string>
    <string name="close_date_id">Close Date (MM/DD/YYYY)</string>
    <string name="enter_close_date_id">close date</string>
    <string name="ach_name_id">ACH Name</string>
    <string name="enter_ach_name_id">ach name</string>
    <string name="owner_name_id">Owner Name</string>
    <string name="enter_owner_name_id">owner name</string>
    <string name="street1_id">Street Address</string>
    <string name="enter_street1_id">street line 1</string>
    <string name="street2_id">Street Address (optional)</string>
    <string name="enter_street2_id">street line 2</string>
    <string name="city_id">City</string>
    <string name="enter_city_id">city</string>
    <string name="state_id">State</string>
    <string name="enter_state_id">state</string>
    <string name="zip_id">Zip</string>
    <string name="enter_zip_id">zip</string>
    <string name="email_id">Email Address (optional)</string>
    <string name="enter_email_id">email</string>
    <string name="phone_id">Phone Numer</string>
    <string name="enter_phone_id">phone</string>
    <string name="recurring_id">Recurring Numer</string>
    <string name="enter_recurring_id">recurring</string>
    <string name="recurring_start_date_id">Start Date (MM/DD/YYYY)</string>
    <string name="enter_recurring_start_date_id">recurring start date</string>
    <string name="recurring_type_id">Recurring Type</string>
    <string name="enter_recurring_type_id">recurring type</string>
    <string name="recurring_end_date_id">End Date (MM/DD/YYYY)</string>
    <string name="enter_recurring_end_date_id">recurring end date</string>
    <string name="reference_number_id">Reference Number/Transaction Number</string>
    <string name="enter_reference_number_id">reference number</string>
    <string name="swipe_card">Swipe Card</string>
    <string name="swipe_card_msr">Swipe Card(MSR)</string>
    <string name="scan_card">Scan Card</string>
    <string name="submit">Submit</string>
    <string name="readCheque">Read Micr</string>
    <string name="ok">OK</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="authorization_number">Authorization Number</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="order_id2">Order Id</string>
    <string name="status">Status</string>
    <string name="approved_id">Approved</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="image_desc">ID Tech Logo</string>
    <string name="pref_user_profileCC">User Profile (CC)</string>
    <string name="pref_MID">Set MID</string>
    <string name="pref_MID_summary">Set the MID.</string>
    <string name="pref_MID_key">prefMIDKey</string>
    <string name="pref_TID">Set TID</string>
    <string name="pref_TID_summary">Set the TID.</string>
    <string name="pref_TID_key">prefTIDKey</string>
    <string name="pref_Processor">Set Processor</string>
    <string name="pref_Processor_summary">Set the processor.</string>
    <string name="pref_Processor_key">prefProcessorKey</string>
    <string name="pref_Gateway_id">Set GatewayID</string>
    <string name="pref_Gateway_id_summary">Set the gateway id.</string>
    <string name="pref_Gateway_id_key">prefGatewayIDKey</string>
    <string name="pref_Transaction_center_id">Set TransactionCenterID.</string>
    <string name="pref_Transaction_center_id_summary">Set the transaction center id.</string>
    <string name="pref_Transaction_center_id_key">prefTransactionCenterID</string>
    <string name="pref_user_profileACH">User Profile (ACH)</string>
    <string name="pref_MID_key_ACH">prefMIDKeyACH</string>
    <string name="pref_Processor_key_ACH">prefProcessorKeyACH</string>
    <string name="pref_Gateway_id_key_ACH">prefGatewayIDKeyACH</string>
    <string name="pref_Transaction_center_id_key_ACH">prefTransactionCenterIDACH</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="pref_user_profileGeneral">User Profile (General)</string>
    <string name="pref_CompanyName">Set Comapany Name</string>
    <string name="pref_CompanyName_summary">Set the Comapany Name.</string>
    <string name="pref_CompanyName_key">prefCompanyNameKey</string>
    <string name="pref_AllowedMode">Set Allowed Mode</string>
    <string name="pref_AllowedMode_summary">Set the AllowedMode.</string>
    <string name="pref_AllowedMode_key">prefAllowedModeKey</string>
    <string name="signBelow">Please Sign below ...</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="logical_name_colon">Logical name: </string>
    <string name="open">Open</string>
    <string name="claim">Claim</string>
    <string name="release">Release</string>
    <string name="close">Close</string>
    <string name="check_health">Check health</string>
    <string name="info">Info</string>
    <string name="device_enabled">Device enabled</string>
    <string name="async_mode">Async mode</string>
    <string name="device_messages">Device messages: </string>
    <string name="msr">MSR</string>
    <string name="auto_disable">Auto disable</string>
    <string name="data_event_enabled">Data event enabled</string>
    <string name="track1_data">Track 1 data: </string>
    <string name="track2_data">Track 2 data: </string>
    <string name="track3_data">Track 3 data: </string>
    <string name="clear_fields">Clear fields</string>
    <string name="refresh_fields">Refresh fields</string>
    <string name="sale">Sale</string>
    <string name="_void">Void</string>
    <string name="recurring">Recurring</string>
    <string name="saving">Saving</string>
    <string name="checking">Checking</string>
    <string-array name="states">

        <item>AL</item>

        <item>AK</item>

        <item>AZ</item>

        <item>AR</item>

        <item>CA</item>

        <item>CO</item>

        <item>CT</item>

        <item>DE</item>

        <item>DC</item>

        <item>FL</item>

        <item>GA</item>

        <item>HI</item>

        <item>ID</item>

        <item>IL</item>

        <item>IN</item>

        <item>IA</item>

        <item>KS</item>

        <item>KY</item>

        <item>LA</item>

        <item>ME</item>

        <item>MD</item>

        <item>MA</item>

        <item>MI</item>

        <item>MN</item>

        <item>MS</item>

        <item>MO</item>

        <item>MT</item>

        <item>NE</item>

        <item>NV</item>

        <item>NH</item>

        <item>NJ</item>

        <item>NM</item>

        <item>NY</item>

        <item>NC</item>

        <item>ND</item>

        <item>OH</item>

        <item>OK</item>

        <item>OR</item>

        <item>PA</item>

        <item>RI</item>

        <item>SC</item>

        <item>SD</item>

        <item>TN</item>

        <item>TX</item>

        <item>UT</item>

        <item>VT</item>

        <item>VA</item>

        <item>WA</item>

        <item>WV</item>

        <item>WI</item>

        <item>WY</item>

    </string-array>
    <string-array name="frequency">
        <item>daily</item>
        <item>weekly</item>
        <item>biweekly</item>
        <item>monthly</item>
        <item>bimonthly</item>
        <item>quarterly</item>
        <item>semiannually</item>
        <item>annually</item>
    </string-array>
    <string-array name="account_type">
        <item>C</item>
        <item>S</item>
    </string-array>
    <string-array name="allowed_mode">
        <item>Checks and Cards</item>
        <item>Checks Only</item>
        <item>Cards Only</item>
    </string-array>
    <string-array name="allowed_mode_vals">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="image_live_capture">live capture</string>
    <string name="image_gallery">gallery</string>
    <string name="image_file">browse image</string>
    <string name="image_take_picture">take picture</string>
    <string name="settings">Settings</string>
    <string name="ocr_recognize_micr">read micr</string>
    <string name="ocr_recognize_zone">select area</string>
    <string name="micr_result">MICR Results</string>
    <string name="micr_result_micrlinetext">MICR Line Text</string>
    <string name="micr_result_auxiliary_on_us">Auxiliary on-Us</string>
    <string name="micr_result_epc">EPC</string>
    <string name="micr_result_routing">Routing</string>
    <string name="micr_result_account">Account</string>
    <string name="micr_result_check_number">Check number</string>
    <string name="micr_result_amount">Amount</string>
    <string name="settings_micr_extraction_mode">MICR Extraction Modes</string>
    <string name="settings_video_micr_extraction_mode">Live Capture:</string>
    <string name="settings_picture_micr_extraction_mode">Still Images:</string>
    <string name="settings_strict_mode">Strict Mode</string>
    <string name="settings_relaxed_mode">Relaxed Mode</string>
    <string name="settings_strict_mode_note">Will only show the results controller once it was able to extract both Routing and Account numbers from the MICR string.</string>
    <string name="settings_relaxed_mode_note">Will show the results controller once it was able to detect the MICR string.</string>
    <string name="micr_note_line1">Make sure the MICR code fits within the MICR Area guides.</string>
    <string name="micr_note_line2">Also ensure there is plenty of light on the cheque.</string>
    <string name="micr_note_area">MICR Area</string>
    <string name="menu_settings_General">General Settings</string>
    <string name="auth">PreAuth</string>
    <string-array name="settings_micr_extraction_values">
        <item>Strict Mode</item>
        <item>Relaxed Mode</item>
    </string-array>
    <string-array name="reader_type">
        <item>UniMag (80110001) / UniMag Pro (80110004)</item>
        <item>UniMag II (80110008) / Shuttle (80110010)</item>
    </string-array>
</resources>